fix: tab bar not centered and disable channel item href

--- a/plugins/btw.bitslayn.channelIcons/src/styles.css
+++ b/plugins/btw.bitslayn.channelIcons/src/styles.css
@@ -12,7 +12,7 @@
 
 .channelEditorTabBar {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   height: 40px;
 }
 
@@ -20,7 +20,6 @@
   display: flex;
   align-items: center;
   border-bottom: 2px solid transparent;
-  margin-right: 40px;
   font-size: 14px;
 }
 
@@ -100,4 +99,8 @@
   align-items: center;
   margin-bottom: 8px;
   justify-content: space-between;
+}
+
+.channelExample:active {
+  pointer-events: none;
 }
